--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@ body {
 
 /* Optional: Specific left-section tweaks */
 .left-section {
-gap: 30px;
+   gap: 20px;
+   margin-top: 25px;
 }
 
 .right-section {
-  gap: 30px;
+  gap: 20px;
+  margin-top: 25px;
 }
 
 
@@ -369,7 +371,7 @@ gap: 30px;
       transition: transform 0.3s ease;
     }
     .help-card:hover {
-      transform: scale(2.0);
+      transform: scale(1.1);
     }
     .help-card img {
       width: 55px;
@@ -393,7 +395,7 @@ gap: 30px;
     }
     .portal-btn:hover {
       background: #147d2b;
-      transform: scale(2.0);
+      transform: scale(1.1);
     }
 
     
